--- a/app/src/App.css
+++ b/app/src/App.css
@@ -36,3 +36,17 @@
     transform: rotate(360deg);
   }
 }
+
+#floor1 > * {
+  fill: rgba(0,0,0,0);
+}
+#floor1 > *:hover {
+  fill: rgba(255,0,0,0.25);
+}
+
+#floor2 > * {
+  fill: rgba(0,0,0,0);
+}
+#floor2 > *:hover {
+  fill: rgba(255,0,0,0.25);
+}
